log/build_2022-11-25_02-58-03/head/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/martin/ros2_workspaces/ros2_ws_dev/install/head/lib/python3.10/site-packages/head/head_tf_move_sub.py", line 10
    self.subscription = self.create_subscription(String 'head_move', self.tf_move_callback, 10)
                                                        ^^^^^^^^^^^
SyntaxError: invalid syntax

